corrections to destination section on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -313,6 +313,11 @@ header {
 .home .content-destination img {
   border-radius: 10px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-pick {
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
@@ -321,9 +326,10 @@ header {
 }
 @media (max-width: 500px) {
   .home .content-pick {
-    width: 75%;
+    width: 100%;
     margin: 0 auto;
     flex-direction: column;
+    align-items: center;
   }
 }
 .home .content-pick .destination {
@@ -332,6 +338,6 @@ header {
 }
 @media (max-width: 500px) {
   .home .content-pick .destination {
-    width: 100%;
+    width: 80%;
   }
 }
