--- a/less/home-page.less
+++ b/less/home-page.less
@@ -98,6 +98,10 @@ header {
     img {
       border-radius: 10px;
     }
+
+    @media @mobile {
+      width: 100%;
+    }
   }
 
   .content-pick {
@@ -107,9 +111,10 @@ header {
     justify-content: space-between;
 
     @media @mobile {
-      width: 75%;
+      width: 100%;
       margin: 0 auto;
       flex-direction: column;
+      align-items: center;
     }
 
     .destination {
@@ -117,7 +122,7 @@ header {
       margin-bottom: 30px;
       
       @media @mobile {
-        width: 100%;
+        width: 80%;
       }
     }
   }
